--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -1,5 +1,6 @@
 @import "./base.scss";
 // 背景选择器
+@import "./qrcode.scss";
 @import "./bg-selector.scss";
 @import "./sku-spec.scss";
 @import "./sku-table.scss";
