--- a/examples/assets/index.scss
+++ b/examples/assets/index.scss
@@ -1,3 +1,3 @@
 @import "common.scss";
 @import "md.scss";
-@import "~highlight.js/styles/color-brewer";
+@import "~highlight.js/styles/solarized-dark";
