--- a/lib/theme-chalk/advanced-query.css
+++ b/lib/theme-chalk/advanced-query.css
@@ -1,1 +1,1 @@
-.j-advanced-query{text-align:center}.j-advanced-query .row .el-form-item{margin-bottom:10px}
+.j-advanced-query{display:inline-block;text-align:center}.j-advanced-query .row .el-form-item{margin-bottom:10px}
