--- a/packages/theme-chalk/src/position-selector.scss
+++ b/packages/theme-chalk/src/position-selector.scss
@@ -4,7 +4,9 @@
     margin-top: 10px;
     font-size: small;
   }
-   .map-dialog .el-dialog__body {
+}
+.j-position-selector-dialog{
+  .el-dialog__body {
     padding: 0px;
   }
   .map{
